# Voice-IT

./: .env.example  .gitignore  LICENSE  PLATFORM_SUPPORT.md  README.md  build.bat  pyproject.toml  requirements.txt
config/: default_config.yaml
voice_it/: __init__.py  __main__.py  __version__.py  app.py
voice_it/core/: __init__.py  audio_engine.py  context_detector.py  hotkey_manager.py  language_config.py  paste_handler.py  retry.py  startup.py
voice_it/features/: __init__.py  command_handler.py  dictation.py
voice_it/prompts/: __init__.py  dictation.md
voice_it/providers/: __init__.py  base_provider.py  chatgpt_provider.py  gemini_provider.py  grok_provider.py  groq_provider.py  provider_manager.py
voice_it/storage/: __init__.py  auth_store.py  config.py  database.py
voice_it/ui/: __init__.py  bridge.py  recording_indicator.py  tray.py  window_manager.py
voice_it/ui/assets/: generate_icon.py
voice_it/ui/web/: icon-design.html  index.html  recording.html
voice_it/ui/web/css/: base.css  components.css  layout.css  variables.css  views.css
voice_it/ui/web/js/: api.js  app.js
